using UnityEngine;

namespace Entity.Domain.InGame.Character.Enemy
{
    public abstract class EnemyFactory
    {
        
    }
}