using UnityEngine;

namespace Entity.Domain.InGame.Character.Enemy
{
    public class SlimeFactory
    {
        
    }
}