using UnityEngine;

namespace Entity.Domain.InGame.Character.Player
{
    public class PlayerHPModel
    {
        
    }
}