using UnityEngine;

namespace Entity.Domain.InGame.Battle.Wave
{
    public class GameClear
    {
        
    }
}