using UnityEngine;

namespace Entity.Domain.InGame.Battle.Turn
{
    public class PlayerTurn
    {
        
    }
}