using UnityEngine;

namespace Entity.Domain.InGame.Core
{
    public enum Enemys
    {
        
    }
}