using UnityEngine;

namespace Entity.Domain.InGame.Effect
{
    public class MultiHeal
    {
        
    }
}