using UnityEngine;

namespace Entity.Domain.InGame.Model
{
    public class PlayerModel
    {
        
    }
}