using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Entity.Domain.InGame.Puzzle
{
    public class ComboChecker
    {
        public void Check()
        {

        }
    }
}
