using UnityEngine;

namespace Entity.Domain.InGame.Puzzle
{
    public class ComboCommand
    {
        
    }
}